@@ -54,7 +54,7 @@ a.path.publisher		{padding:20px; margin-top:10px; color:#fff; font-size:1.2em;}
 /*	Country Code List style
 	============================================= */
 .country_menu_wrap			{width:960px; margin:0 auto; padding-bottom:40px;}
-.country_menu_list_wrap		{margin:0 auto; width:520px;}
+.country_menu_list_wrap		{margin:0 auto; width:960px;}
 .publisher_menu_list_wrap	{margin:0 auto; width:860px;}
 ul.country_menu_list		{list-style:none; padding:0; margin:0 auto; width:100%;}
 ul.country_menu_list li.no	{display:none;}
@@ -62,19 +62,19 @@ ul.country_menu_list li img	{max-height:20px;}
 ul.country_menu_list li		{border-bottom:1px solid #A0988B;}
 ul.country_menu_list li:last-of-type	{border:0;}
 span.select_wrap			{display:inline-block; vertical-align:top; width:50px;}
-span.select_wrap.countryid	{padding-left:10px; color:#CFC6B4;}
-span.select_wrap.publisherid{padding-left:10px; color:#FFF; text-align:right; width:200px;}	
-span.select_wrap.countryname{width:400px; padding-left:10px; text-align:left;}
-span.select_wrap.publishername		{width:600px; padding-right:10px; text-align:left;}
+span.select_wrap.countryid	{color:#CFC6B4;}
+span.select_wrap.publisherid{padding:0 10px; color:#FFF; text-align:right; width:120px; font-size:0.8em;}	
+span.select_wrap.countryname{width:330px; padding:0 10px; text-align:left;}
+span.select_wrap.publishername		{width:300px; padding:0 10px; text-align:left;}
 .publisher_list				{width:100%; height:100%; color:#fff; font-size:1.2em; line-height:1.15em; display:block; padding:20px 0; font-weight:bold;}
-a.country_code				{width:100%; height:100%; color:#fff; font-size:1.4em; line-height:1.15em; display:block; padding:20px 0 20px 20px; vertical-align:top; text-align:center;}
+a.country_code				{width:100%; height:100%; color:#fff; font-size:1.2em; line-height:1.15em; display:block; padding:20px 0; vertical-align:top; text-align:center;}
 a.country_code.publishers	{width:820px; padding:20px; font-size:1.2em;}
 a.country_code:hover		{background-color:rgba(37, 115, 205, 0.7);}
 
 
 /*	Text and Description styles
 	============================================= */
-.description_wrap			{width:880px; margin:0 auto; padding:40px; text-align:left; background-color:rgba(255,255,255,0.1);}
+.description_wrap			{width:880px; margin:0 auto; margin-bottom:40px; padding:40px; text-align:left; background-color:rgba(255,255,255,0.1);}
 .description_wrap.publisher	{margin-top:40px; margin-bottom:40px;}
 .description				{display:inline-block; vertical-align:top; width:410px; margin-right:60px;}
 .description:last-of-type	{margin-right:0;}
