@@ -32,7 +32,7 @@ Create widgets for your website.
 Explore
 
 #explore_info_text
-Explore IATI data of a country.
+Explore IATI data.
 
 #develop_button_text
 Develop
@@ -71,13 +71,13 @@ Publisher Edition
 Relevant links
 
 #explore_title_text
-Explore a country
+Explore countries and publishers
 
 #explore_paragraph1_text
-Pick a country below to explore their data.
+Pick a country or publisher below to explore their data.
 
 #explore_paragraph2_text
-Only countries with published data to IATI are available for exploration. 
+You can also pick multiple countries or publishers from the selector. Only countries and publishers with published data to IATI are available for exploration. 
 
 #footer1_text
 A 2014 project by the Development Portal team
