@@ -1,3 +1,8 @@
+Static site (2014-10-08 shi)
+==============================
+Redesign index page to include both countries and publishers
+
+
 Static site (2014-09-19 shi)
 ==============================
 Fixed new URL for Nepal portal
